# python-site-scraper

./: .gitignore  README.md  pyproject.toml
python_site_scraper/: __init__.py
