[tool.poetry]
name = "python-site-scraper"
version = "0.1.0"
description = ""
authors = ["Russell Nipper <rnipper@bethel.jw.org>"]
readme = "README.md"
packages = [{include = "python_site_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
